@@ -1,3 +1,8 @@
+Sat Oct  1 22:17:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (iseq_compile_each): move numeric literal range
+	  optimization from fixup_nodes() in parse.y.
+
 Sat Oct  1 19:19:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (compile_flip_flop): simplify generated code.
